--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,6 +1,6 @@
-<form method="post" action="/posts/<%=@post.id%>">
+<form action="/posts/<%= @post.id %>" method="post">
   <input id="hidden" type="hidden" name="_method" value="patch">
-  Name<input type="text" value="<%=@post.name%>" name="name">
-  Contents<input type="text" value="<%=@post.content%>" name="content">
-  <input type="submit" value="submit">
+  Edit Post Title: <input type="text" name="name" id="name" value="<%= @post.name %>">
+  Edit Post Content: <input type="text" name="content" id="content" value="<%= @post.content %>">
+  <input type="submit" id="submit">
 </form>
