--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,6 +1,5 @@
-<form method="POST" action="/posts">
-  <input type="text" name="name">
-  <input type="text" name="content">
-  <input type="submit" value="submit">
-
+<form action="/posts" method="POST">
+  Post Title: <input type="text" name="name" id="name">
+  Post Content: <input type="text" name="content" id="content">
+  <input type="submit" id="submit">
 </form>
